new card pop animation with anime.js and image change

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
+        integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
-    <audio src="/assets/laugh.mp3"></audio>
     <div class="box">
         <div class="card">
             <div class="front">
@@ -24,32 +27,42 @@
             </div>
             <div class="back">
                 <div>
-                    <img src="/imgs/image1.jpg" />
+                    <img src="/imgs/card.gif" />
                 </div>
             </div>
         </div>
     </div>
+    <audio src="/assets/laugh.mp3"></audio>
 </body>
 
 <script>
 
     const cards = document.querySelectorAll(".card");
     const audio = document.querySelector("audio");
-    let selectedCard = null;
+    let an = null;
 
     cards.forEach(cd => cd.addEventListener("click", handleCardClick))
 
     function handleCardClick(e) {
-        this.classList.add("rotate-card");
-        audio.currentTime = 0;
-        audio.play();
-        selectedCard = this;
+
+        an = anime({
+            targets: ".card",
+            keyframes: [
+                { top: -120, duration: 200, easing: 'linear', scale: 1.2, },
+                { rotateY: 360, duration: 200 },
+                { rotateY: -360, duration: 200 },
+                { rotateY: 180, duration: 500 },
+            ],
+            complete: function (anim) {
+                audio.currentTime = 0;
+                audio.play();
+            }
+        })
     }
 
     audio.addEventListener("ended", function () {
-        audio.currentTime = 0;
-        selectedCard.classList.remove("rotate-card");
-        selectedCard = null;
+        an.reset();
+        an = null;
     });
 
 
